# piano_synth

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  piano.scd
